// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSelectors Should create selectors 1`] = `
Object {
  "a bt": Object {
    "h": Object {
      "label": "button ::after on hover",
      "target": "buttonClassName:hover::after",
    },
    "n": Object {
      "label": "button ::after",
      "target": "buttonClassName::after",
    },
  },
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "b bt": Object {
    "h": Object {
      "label": "button ::block on hover",
      "target": "buttonClassName:hover::block",
    },
    "n": Object {
      "label": "button ::block",
      "target": "buttonClassName::block",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "bt": Object {
    "h": Object {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "n": Object {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
}
`;

exports[`createSelectors Should create selectors without pseudo elements 1`] = `
Object {
  "bt": Object {
    "h": Object {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "n": Object {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
}
`;
